--- a/views/home.hbs
+++ b/views/home.hbs
@@ -10,7 +10,7 @@
     <h1>Records</h1>
   </div>
   <div class="col-6 d-flex justify-content-end">
-    <a href="/adduser" type="button" class="btn btn-primary align-self-center">+ add user</a>
+    <a href="/adduser" type="button" class="btn btn-primary align-self-center">Add New User</a>
   </div>
 </div>
 
